优化配置提供者实例化及线程池关闭逻辑